--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Welcome to the most extraordinay hotel">
   <meta name="keyword" content="hotel,boston">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" media="screen and (max-width:768px)" href="css/mobile.css">
   <title>Hotel BT | About</title>
 </head>
 
